--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "globals": "^16.2.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
